frontend/src/components/ListingIndex/ListingIndex.css
.index-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.index {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  padding: 5px 15px 5px 15px;
  cursor: pointer;
}

.index-item {
  border-style: solid;
  border-width: 2px;
  border-color: white;
  padding: 10px;
  width: min-content;
}

.index-image-carousel {
  width: 305px;
  height: 330px;
  overflow: hidden;
}

.index-image {
  border-radius: 10px;
  width: 305px;
  height: 290px;
}

.index-header {
  font-weight: bold;
  padding-top: 5px;
}

.info-line-1 {
  color: gray;
  padding-top: 5px;
}

.info-line-2 {
  color: gray;
  padding-top: 5px;
}

.index-price {
  padding-top: 10px;
}

.show-map-button {
  border-radius: 30px;
  border: none;
  background-color: black;
  color: white;
  font-size: 12px;
  letter-spacing: .8px;
  position: sticky;
  bottom: 30px;
  padding: 10px 20px;
  height: 40px;
  width: 140px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.show-map-button img {
  height: 22px;
  width: 25px;
  margin-left: 5px;
}

